# mptcp-proxy

./: .gitignore  .gitmodules  README.md  config.go  config.yml  go.mod  go.sum  main.go  types.go
env/: config.sh  destroy-net.sh  destroy.sh  docker-compose.yml  init.sh
env/configs/net/: client_1.xml  client_2.xml  lb1.xml  mgmt.xml  proxy1.xml  proxy2.xml  server1.xml  server2.xml
env/configs/vm/client/: config.yml  init.sh  network_config.yml
env/configs/vm/l3sw1/: config.yml  init.sh  network_config.yml
env/configs/vm/lb1/: config.yml  init.sh  network_config.yml
env/configs/vm/proxy1/: config.yml  init.sh  network_config.yml
env/configs/vm/proxy2/: config.yml  init.sh  network_config.yml
env/configs/vm/server1/: config.yml  init.sh  network_config.yml
env/configs/vm/server2/: config.yml  init.sh  network_config.yml
kern/: Makefile  mptcp_proxy_kern.c
lib/: common.h  types.go
proxy/: .gitignore  Cargo.toml  Makefile  config.go  config.yml  go.sum  main.go  mptcp_proxy_kern.c  proxy_config.yml
proxy/src/: main.rs
server/: .gitignore  Makefile  config.go  config.yml  go.sum  logging.go  main.go  mptcp_server_kern.c  mptcp_server_kern.ll  server_config.yml
