[package]
name = "proxy"
version = "0.1.0"
authors = ["Takanori Hirano <hrn.takanori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afxdp = "0.2.0"
libbpf-sys = "0.0.7-1"
libc = "0.2"
errno = "0.2"
arraydeque = "0.4"
crossbeam-channel = "0.4"
rlimit = "0.3"
structopt = "0.3"
pnet = "0.26.0"

[dev-dependencies]
criterion = "0.3"
