[package]
name = "proxy"
version = "0.1.0"
authors = ["Takanori Hirano <hrn.takanori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afxdp = "0.2.0"
libbpf-sys = "0.0.7-1"
libc = "0.2"
errno = "0.2"
arraydeque = "0.4"
rlimit = "0.3"
pnet = "0.26"
config = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = "0.16"
async-std = "1.6"

[dev-dependencies]
